Weather Forecast from National Weather Service

--- a/Weather Data.ipynb
+++ b/Weather Data.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'<!DOCTYPE html>\\n<html class=\"no-js\">\\n    <head>\\n        <!-- Meta -->\\n        <meta name=\"viewport\" content=\"width=device-width\">\\n        <link rel=\"schema.DC\" href=\"http://purl.org/dc/elements/1.1/\" /><title>National Weather Service</title><meta name=\"DC.title\" content=\"National Weather Service\" /><meta name=\"DC.description\" content=\"NOAA National Weather Service National Weather Service\" /><meta name=\"DC.creator\" content=\"US Department of Commerce, NOAA, National Weather Service\" /><meta name=\"DC.date.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -126,20 +126,20 @@
        "<div class=\"panel-body\" id=\"seven-day-forecast-body\">\n",
        "<div id=\"seven-day-forecast-container\"><ul class=\"list-unstyled\" id=\"seven-day-forecast-list\"><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
-       "<p class=\"period-name\">Today<br/><br/></p>\n",
-       "<p><img alt=\"Today: Mostly sunny, with a high near 72. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Today: Mostly sunny, with a high near 72. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \"/></p><p class=\"short-desc\">Mostly Sunny</p><p class=\"temp temp-high\">High: 72 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<p class=\"period-name\">This<br/>Afternoon</p>\n",
+       "<p><img alt=\"This Afternoon: Sunny, with a high near 73. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"This Afternoon: Sunny, with a high near 73. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 73 °F</p></div></li><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
        "<p class=\"period-name\">Tonight<br/><br/></p>\n",
        "<p><img alt=\"Tonight: Clear, with a low around 51. West wind 5 to 10 mph, with gusts as high as 15 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nskc.png\" title=\"Tonight: Clear, with a low around 51. West wind 5 to 10 mph, with gusts as high as 15 mph. \"/></p><p class=\"short-desc\">Clear</p><p class=\"temp temp-low\">Low: 51 °F</p></div></li><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
        "<p class=\"period-name\">Saturday<br/><br/></p>\n",
-       "<p><img alt=\"Saturday: Sunny, with a high near 74. West wind 5 to 15 mph, with gusts as high as 25 mph. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Saturday: Sunny, with a high near 74. West wind 5 to 15 mph, with gusts as high as 25 mph. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 74 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<p><img alt=\"Saturday: Sunny, with a high near 74. Northwest wind 5 to 15 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"Saturday: Sunny, with a high near 74. Northwest wind 5 to 15 mph, with gusts as high as 20 mph. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 74 °F</p></div></li><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
        "<p class=\"period-name\">Saturday<br/>Night</p>\n",
-       "<p><img alt=\"Saturday Night: Mostly clear, with a low around 47. Northwest wind 10 to 15 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nfew.png\" title=\"Saturday Night: Mostly clear, with a low around 47. Northwest wind 10 to 15 mph. \"/></p><p class=\"short-desc\">Mostly Clear</p><p class=\"temp temp-low\">Low: 47 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<p><img alt=\"Saturday Night: Mostly clear, with a low around 47. West wind around 10 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/nfew.png\" title=\"Saturday Night: Mostly clear, with a low around 47. West wind around 10 mph, with gusts as high as 20 mph. \"/></p><p class=\"short-desc\">Mostly Clear</p><p class=\"temp temp-low\">Low: 47 °F</p></div></li><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
        "<p class=\"period-name\">Sunday<br/><br/></p>\n",
-       "<p><img alt=\"Sunday: Sunny, with a high near 69. North wind around 10 mph. \" class=\"forecast-icon\" src=\"newimages/medium/skc.png\" title=\"Sunday: Sunny, with a high near 69. North wind around 10 mph. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 69 °F</p></div></li><li class=\"forecast-tombstone\">\n",
+       "<p><img alt=\"Sunday: Sunny, with a high near 69. North wind 5 to 10 mph. \" class=\"forecast-icon\" src=\"newimages/medium/skc.png\" title=\"Sunday: Sunny, with a high near 69. North wind 5 to 10 mph. \"/></p><p class=\"short-desc\">Sunny</p><p class=\"temp temp-high\">High: 69 °F</p></div></li><li class=\"forecast-tombstone\">\n",
        "<div class=\"tombstone-container\">\n",
        "<p class=\"period-name\">Sunday<br/>Night</p>\n",
        "<p><img alt=\"Sunday Night: Clear, with a low around 45.\" class=\"forecast-icon\" src=\"newimages/medium/nskc.png\" title=\"Sunday Night: Clear, with a low around 45.\"/></p><p class=\"short-desc\">Clear</p><p class=\"temp temp-low\">Low: 45 °F</p></div></li><li class=\"forecast-tombstone\">\n",
@@ -166,7 +166,7 @@
        "</div>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -222,18 +222,18 @@
      "text": [
       "<div class=\"tombstone-container\">\n",
       " <p class=\"period-name\">\n",
-      "  Today\n",
+      "  This\n",
       "  <br/>\n",
-      "  <br/>\n",
+      "  Afternoon\n",
       " </p>\n",
       " <p>\n",
-      "  <img alt=\"Today: Mostly sunny, with a high near 72. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/sct.png\" title=\"Today: Mostly sunny, with a high near 72. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \"/>\n",
+      "  <img alt=\"This Afternoon: Sunny, with a high near 73. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \" class=\"forecast-icon\" src=\"newimages/medium/few.png\" title=\"This Afternoon: Sunny, with a high near 73. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. \"/>\n",
       " </p>\n",
       " <p class=\"short-desc\">\n",
-      "  Mostly Sunny\n",
+      "  Sunny\n",
       " </p>\n",
       " <p class=\"temp temp-high\">\n",
-      "  High: 72 °F\n",
+      "  High: 73 °F\n",
       " </p>\n",
       "</div>\n"
      ]
@@ -245,16 +245,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Today'"
+       "'ThisAfternoon'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today\n",
-      "Mostly Sunny\n",
-      "High: 72 °F\n"
+      "ThisAfternoon\n",
+      "Sunny\n",
+      "High: 73 °F\n"
      ]
     }
    ],
@@ -313,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Today: Mostly sunny, with a high near 72. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. '"
+       "'This Afternoon: Sunny, with a high near 73. Northwest wind 10 to 15 mph, with gusts as high as 20 mph. '"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -433,10 +433,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Today</td>\n",
-       "      <td>Mostly Sunny</td>\n",
-       "      <td>High: 72 °F</td>\n",
-       "      <td>Today: Mostly sunny, with a high near 72. Nort...</td>\n",
+       "      <td>ThisAfternoon</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>High: 73 °F</td>\n",
+       "      <td>This Afternoon: Sunny, with a high near 73. No...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -450,7 +450,7 @@
        "      <td>Saturday</td>\n",
        "      <td>Sunny</td>\n",
        "      <td>High: 74 °F</td>\n",
-       "      <td>Saturday: Sunny, with a high near 74. West win...</td>\n",
+       "      <td>Saturday: Sunny, with a high near 74. Northwes...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -500,7 +500,7 @@
       ],
       "text/plain": [
        "          Period    Short Desc         Temp  \\\n",
-       "0          Today  Mostly Sunny  High: 72 °F   \n",
+       "0  ThisAfternoon         Sunny  High: 73 °F   \n",
        "1        Tonight         Clear   Low: 51 °F   \n",
        "2       Saturday         Sunny  High: 74 °F   \n",
        "3  SaturdayNight  Mostly Clear   Low: 47 °F   \n",
@@ -511,9 +511,9 @@
        "8        Tuesday         Sunny  High: 79 °F   \n",
        "\n",
        "                                               Title  \n",
-       "0  Today: Mostly sunny, with a high near 72. Nort...  \n",
+       "0  This Afternoon: Sunny, with a high near 73. No...  \n",
        "1  Tonight: Clear, with a low around 51. West win...  \n",
-       "2  Saturday: Sunny, with a high near 74. West win...  \n",
+       "2  Saturday: Sunny, with a high near 74. Northwes...  \n",
        "3  Saturday Night: Mostly clear, with a low aroun...  \n",
        "4  Sunday: Sunny, with a high near 69. North wind...  \n",
        "5         Sunday Night: Clear, with a low around 45.  \n",
@@ -522,7 +522,7 @@
        "8               Tuesday: Sunny, with a high near 79.  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
