Tariff Classification.ipynb

--- a/Tariff Classification.ipynb
+++ b/Tariff Classification.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -401,6 +401,7 @@
        "      <th>SKUNumber</th>\n",
        "      <th>SKUNumberCompanyDifferentFromExcel</th>\n",
        "      <th>Desc</th>\n",
+       "      <th>Classi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -416,6 +417,7 @@
        "      <td>097S04167</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Phaser 7800 Professional Finisher (2,000-Sheet...</td>\n",
+       "      <td>8443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -429,6 +431,7 @@
        "      <td>097S03282</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...</td>\n",
+       "      <td>8443</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -442,32 +445,7 @@
        "      <td>097S03719</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8443992550</td>\n",
-       "      <td>Xerox</td>\n",
-       "      <td>VersaLink C7000 Three Paper Tray Module (520-s...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nCompatible Products\\nVersaLink C7000\\nAvaila...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>097S04908</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>VersaLink C7000 Three Paper Tray Module (520-s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8443992050</td>\n",
-       "      <td>Xerox</td>\n",
-       "      <td>Phaser 7800 High Capacity Tandem Tray (2,520-S...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\nCompatible Products\\nPhaser 7800\\nAvailabili...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>097S04160</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Phaser 7800 High Capacity Tandem Tray (2,520-S...</td>\n",
+       "      <td>8443</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -478,45 +456,35 @@
        "0      8443992550         Xerox   \n",
        "1      8443992550         Xerox   \n",
        "2      8443992550         Xerox   \n",
-       "3      8443992550         Xerox   \n",
-       "4      8443992050         Xerox   \n",
        "\n",
-       "                                         Description  GriCode  \\\n",
-       "0    Phaser 7800 Professional Finisher (2,000-Sheet)      NaN   \n",
-       "1            Phaser 5500/5550 Finisher (3,500-Sheet)      NaN   \n",
-       "2             Phaser 5500/5550 Stacker (3,500-Sheet)      NaN   \n",
-       "3  VersaLink C7000 Three Paper Tray Module (520-s...      NaN   \n",
-       "4  Phaser 7800 High Capacity Tandem Tray (2,520-S...      NaN   \n",
+       "                                       Description  GriCode  ImageAttachments  \\\n",
+       "0  Phaser 7800 Professional Finisher (2,000-Sheet)      NaN               NaN   \n",
+       "1          Phaser 5500/5550 Finisher (3,500-Sheet)      NaN               NaN   \n",
+       "2           Phaser 5500/5550 Stacker (3,500-Sheet)      NaN               NaN   \n",
        "\n",
-       "   ImageAttachments                                       ProductSpecs  \\\n",
-       "0               NaN  \\nCompatible Products\\nPhaser 7800\\nAvailabili...   \n",
-       "1               NaN  \\nCompatible Products\\nPhaser 5550\\n,\\nPhaser ...   \n",
-       "2               NaN  \\nCompatible Products\\nPhaser 5550\\n,\\nPhaser ...   \n",
-       "3               NaN  \\nCompatible Products\\nVersaLink C7000\\nAvaila...   \n",
-       "4               NaN  \\nCompatible Products\\nPhaser 7800\\nAvailabili...   \n",
+       "                                        ProductSpecs  Rationale  SKUNumber  \\\n",
+       "0  \\nCompatible Products\\nPhaser 7800\\nAvailabili...        NaN  097S04167   \n",
+       "1  \\nCompatible Products\\nPhaser 5550\\n,\\nPhaser ...        NaN  097S03282   \n",
+       "2  \\nCompatible Products\\nPhaser 5550\\n,\\nPhaser ...        NaN  097S03719   \n",
        "\n",
-       "   Rationale  SKUNumber  SKUNumberCompanyDifferentFromExcel  \\\n",
-       "0        NaN  097S04167                                 NaN   \n",
-       "1        NaN  097S03282                                 NaN   \n",
-       "2        NaN  097S03719                                 NaN   \n",
-       "3        NaN  097S04908                                 NaN   \n",
-       "4        NaN  097S04160                                 NaN   \n",
+       "   SKUNumberCompanyDifferentFromExcel  \\\n",
+       "0                                 NaN   \n",
+       "1                                 NaN   \n",
+       "2                                 NaN   \n",
        "\n",
-       "                                                Desc  \n",
-       "0  Phaser 7800 Professional Finisher (2,000-Sheet...  \n",
-       "1  Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...  \n",
-       "2  Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...  \n",
-       "3  VersaLink C7000 Three Paper Tray Module (520-s...  \n",
-       "4  Phaser 7800 High Capacity Tandem Tray (2,520-S...  "
+       "                                                Desc  Classi  \n",
+       "0  Phaser 7800 Professional Finisher (2,000-Sheet...    8443  \n",
+       "1  Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...    8443  \n",
+       "2  Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...    8443  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Xerox.head()"
+    "df_Xerox.head(3)"
    ]
   },
   {
@@ -561,22 +529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Phaser 7800 Professional Finisher (2,000-Sheet)\\nCompatible Products\\nPhaser 7800\\nAvailability\\nShips  1-3  days\\nCapacity/Yield\\n1,500 sheets\\nShipping Dimensions (LxWxH)\\n30.1\"x45.7\"x48.9\"\\nShipping Weight\\n253 lb\\nUPC Code\\n095205765397\\n\\r\\nThis finisher/stapler/booklet maker for your Phaser 7800 has a 1,500-sheet main stacker and 500-sheet top tray. It offers a 50-sheet multiposition stapler, hole punch, saddle-stitch booklet maker, and V-fold.\\n']"
+       "['WorkCentre 4265 Universal Fax Kit\\nCompatible Products\\nWorkCentre 4265\\nAvailability\\nShips  11-13  days\\nCapacity/Yield\\nn/a\\nShipping Dimensions (LxWxH)\\n6.6\" x 8.7\" x 2.5\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205862096\\n\\r\\nUniversal fax kit for the WorkCentre 4265.\\n']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(df_Xerox['Desc'][:1])"
+    "list(df_Xerox['Desc'][16:17])"
    ]
   },
   {
@@ -1022,6 +990,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Split the classification for take first 4 digit value "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1262,6 +1237,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "815"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "906-91"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1280,42 +1275,348 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First split the dataset into train, test then split the trainset again into train, validation "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=101)"
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.1,random_state=101)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(91,)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Blind set / holdout set\n",
+    "X_test.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train,X_val,y_train,y_val = train_test_split(X_train,y_train,test_size=0.2,random_state=101)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(652,)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(163,)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "906"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Train/Validation/Test\n",
+    "652+163+91"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use Tfidf to caluculate Tfidf Vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_vect = TfidfVectorizer(stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_bow = tfidf_vect.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(652, 3713)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_bow.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mnb =MultinomialNB()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnb.fit(tfidf_bow,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8443]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['Phaser 7800 Professional Finisher (2,000-Sheet)\\nCompatible Products\\nPhaser 7800\\nAvailability\\nShips  1-3  days\\nCapacity/Yield\\n1,500 sheets\\nShipping Dimensions (LxWxH)\\n30.1\"x45.7\"x48.9\"\\nShipping Weight\\n253 lb\\nUPC Code\\n 095205765397\\n\\r\\nThis finisher/stapler/booklet maker for your Phaser 7800 has a 1,500-sheet main stacker and 500-sheet top tray. It offers a 50-sheet multiposition stapler, hole punch, saddle-stitch booklet maker, and V-fold.\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'WorkCentre 4265 Universal Fax Kit\\nCompatible Products\\nWorkCentre 4265\\nAvailability\\nShips  11-13  days\\nCapacity/Yield\\nn/a\\nShipping Dimensions (LxWxH)\\n6.6\" x 8.7\" x 2.5\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205862096\\n\\r\\nUniversal fax kit for the WorkCentre 4265.\\n'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Xerox['Desc'].loc[16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8443]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['WorkCentre 4265 Finisher (500-Sheet)\\nCompatible Products\\nWorkCentre 4265\\nAvailability\\nCall for Availability\\nCapacity/Yield\\nn/a\\nShipping Dimensions (LxWxH)\\n17.8\" x 13.5\" x 23.4\"\\nShipping Weight\\n28 lb\\nUPC Code\\n095205862089\\n\\r\\nNo need to worry about stapling all of those packets together by hand! This finisher/stapler for your WorkCentre 4265 can hold up to 500 sheets and staple up to 50 sheets at a time (single-position).\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8443]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['WorkCentre 4265 Universal Fax Kit\\nCompatible Products\\nWorkCentre 4265\\nAvailability\\nShips  11-13  days\\nCapacity/Yield\\nn/a\\nShipping Dimensions (LxWxH)\\n6.6\" x 8.7\" x 2.5\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205862096\\n\\r\\nUniversal fax kit for the WorkCentre 4265.\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = mnb.predict(tfidf_vect.transform(X_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "       3215       1.00      0.10      0.18        10\n",
+      "       8443       0.90      1.00      0.94       145\n",
+      "       8471       0.00      0.00      0.00         5\n",
+      "       8523       0.00      0.00      0.00         1\n",
+      "       9027       0.00      0.00      0.00         1\n",
+      "       9403       0.00      0.00      0.00         1\n",
+      "\n",
+      "avg / total       0.86      0.90      0.85       163\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rajam\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1113: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_val,pred))"
+   ]
   },
   {
    "cell_type": "code",
