--- a/Tariff Classification.ipynb
+++ b/Tariff Classification.ipynb
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "       3926], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,20 +1019,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([844399, 854442, 847170, 902730, 491199, 732020, 940320, 852351,\n",
+       "       852352, 940310, 321511, 847160, 847180, 847190, 321519, 853180,\n",
+       "       842139, 392690, 844331, 844332], dtype=int64)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df_Xerox['Classification'] // 10000).unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First 4 Digits of Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_Xerox['Classi'] = df_Xerox['Classification'] // 1000000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First 6 Digits of Classification"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_Xerox['Classi'] = df_Xerox['Classification'] // 1000000"
+    "df_Xerox['Class_6'] = df_Xerox['Classification'] // 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len((df_Xerox['Classification'] // 10000).unique())"
    ]
   },
   {
@@ -1574,13 +1632,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report,confusion_matrix"
    ]
   },
   {
